Linkding/linkdingsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  labels:
    app: linkding
  namespace: linkding
spec:
  selector:
    app: linkding
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  type: LoadBalancer
