Linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  labels:
    name: linkding
spec:
  ingressClassName: traefik
  rules:
  - host: <Host> # I need to research what to put in here
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: linkding
            port: 
              number: 6000
